--- a/debian/control
+++ b/debian/control
@@ -1,32 +1,13 @@
-Source: openssl
+Source: openssl097
 Build-Depends: debhelper (>= 4.2.0), binutils (>= 2.14.90.0.7), zlib1g-dev
 Section: utils
 Priority: optional
 Maintainer: Debian OpenSSL Team <pkg-openssl-devel@lists.alioth.debian.org>
-Uploaders: Christoph Martin <christoph.martin@uni-mainz.de>
+Uploaders: Christoph Martin <christoph.martin@uni-mainz.de>, Kurt Roeckx <kurt@roeckx.be>
 Standards-Version: 3.6.1
 
-Package: openssl
-Priority: optional
-Architecture: any
-Depends: ${shlibs:Depends}, ${perl:Depends}
-Conflicts: ssleay (<< 0.9.2b)
-Suggests: ca-certificates
-Description: Secure Socket Layer (SSL) binary and related cryptographic tools
- This package contains the openssl binary and related tools.
- .
- It is part of the OpenSSL implementation of SSL.
- .
- You need it to perform certain cryptographic actions like:
-  o  Creation of RSA, DH and DSA Key Parameters
-  o  Creation of X.509 Certificates, CSRs and CRLs
-  o  Calculation of Message Digests
-  o  Encryption and Decryption with Ciphers
-  o  SSL/TLS Client and Server Tests
-  o  Handling of S/MIME signed or encrypted Mail
-
 Package: libssl0.9.7
-Section: libs
+Section: oldlibs
 Priority: important
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -37,24 +18,12 @@ Description: SSL shared libraries
  .
  It is part of the OpenSSL implementation of SSL.
 
-Package: libcrypto0.9.7-udeb
-XC-Package-Type: udeb
-Section: debian-installer
-Priority: optional
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Provides: libssl0.9.7
-Description: crypto shared library - udeb
- libcrypto shared library.
- .
- Do not install it on a normal system.
-
-Package: libssl-dev
+Package: libssl0.9.7-dev
 Section: libdevel
 Priority: optional
 Architecture: any
 Depends: libssl0.9.7 (= ${Source-Version})
-Conflicts: ssleay (<< 0.9.2b), libssl08-dev, libssl09-dev, libssl095a-dev, libssl096-dev
+Conflicts: ssleay (<< 0.9.2b), libssl08-dev, libssl09-dev, libssl095a-dev, libssl096-dev, libssl-dev
 Description: SSL development libraries, header files and documentation
  libssl and libcrypt development libraries, header files and manpages
  .
